Netlify CMS Pages collection fixed

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,12 +21,9 @@ collections:
     label: Pages
     label_singular: Page
     description: Specific content for each page of the website.
-    files:
-      - folder: static/content/pages
-        label: "Home"
-        name: "index"
-        fields:
-          - { label: Picture, name: picture, widget: image }
-          - { label: Name, name: name, widget: string }
-          - { label: Role, name: role, widget: string }
-          - { label: Description, name: description, widget: string }
+    folder: static/content/pages
+    fields:
+      - { label: Picture, name: picture, widget: image }
+      - { label: Name, name: name, widget: string }
+      - { label: Role, name: role, widget: string }
+      - { label: Description, name: description, widget: string }
