--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: static/images/uploads
 public_folder: /images/uploads
 
 backend:
-  name: git-gateaway
+  name: git-gateway
   repo: lfarci/loganfarci.com
   branch: main
   commit_messages:
