Gatsby project has been configured

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ locale: en
 site_url: https://www.loganfarci.com/
 display_url: loganfarci.com
 
-media_folder: static/images/uploads
+media_folder: content/images/uploads
 public_folder: /images/uploads
 
 backend:
