Gatsby sources data from a JSON file generated by Netlify CMS

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,10 +21,12 @@ collections:
     label: Pages
     label_singular: Page
     description: Specific content for each page of the website.
+    format: json
+    extension: json
     files:
       - label: Landing page
         name: "index"
-        file: content/pages/index.md
+        file: content/data/index.json
         fields:
           - { label: Picture, name: picture, widget: image }
           - { label: Name, name: name, widget: string }
