--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby": "^4.11.2",
     "gatsby-plugin-netlify-cms": "^6.11.0",
     "gatsby-plugin-sass": "^5.11.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-json": "^4.11.0",
     "netlify-cms-app": "^2.15.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
