--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   },
   "dependencies": {
     "gatsby": "^4.11.2",
+    "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-netlify-cms": "^6.11.0",
     "gatsby-plugin-sass": "^5.11.1",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-remark-images": "^6.11.1",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-json": "^4.11.0",
+    "gatsby-transformer-remark": "^5.11.1",
+    "gatsby-transformer-sharp": "^4.11.0",
     "netlify-cms-app": "^2.15.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
