--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,7 +26,7 @@ collections:
     files:
       - label: Landing page
         name: "index"
-        file: content/data/index.json
+        file: content/data/pages/index/index.json
         fields:
           - { label: Picture Source, name: pictureSource, widget: image }
           - { label: Picture Alternative Text, name: pictureAlt, widget: string }
