--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "loganfarci.com",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "description": "loganfarci.com",
-  "author": "Lofaloa",
+  "author": "Logan Farci",
   "keywords": [
     "gatsby"
   ],
@@ -16,9 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.11.2",
     "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-netlify-cms": "^6.11.0",
+    "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sass": "^5.11.1",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-remark-images": "^6.11.1",
@@ -30,6 +32,7 @@
     "netlify-cms-app": "^2.15.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.50.0"
   },
   "devDependencies": {
