--- a/.github/workflows/deploy-azure-resources.yml
+++ b/.github/workflows/deploy-azure-resources.yml
@@ -7,6 +7,14 @@ on:
     paths:
       - "infra/**"
   workflow_dispatch:
+    inputs:
+        action:
+            description: "Choose an action to perform"
+            required: true
+            type: choice
+            options:
+                - Deploy
+                - Destroy
 
 permissions:
   contents: read
@@ -39,7 +47,17 @@ jobs:
             -backend-config="access_key=${{ secrets.ACCESS_KEY }}"
 
       - name: Terraform Plan
+        if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Deploy') }}
         id: plan
+        run: |
+          terraform plan \
+            -var="subscription_id=${{ secrets.SUBSCRIPTION_ID }}" \
+            -var="workload_name=lfarci" \
+            -out=tfplan
+
+      - name: Terraform Destroy
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Destroy' }}
+        id: destroy
         run: |
           terraform plan \
             -var="subscription_id=${{ secrets.SUBSCRIPTION_ID }}" \
