--- a/.github/workflows/deploy-next-app.yml
+++ b/.github/workflows/deploy-next-app.yml
@@ -21,11 +21,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy to Azure Static Web Apps
-        id: output
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: echo "dir=$(npm config get cache)" >> $GITHUB_OUTPUT
+
+      - name: Cache Node modules
+        uses: actions/cache@v4
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_DEPLOYMENT_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/"
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
+        run: npm clean-install
+
+      - name: Build application
+        run: npm run build
+
+      - name: Deploy to Azure Static Web Apps
+        run: |
+          swa deploy ./out --env production --token ${{ secrets.AZURE_STATIC_DEPLOYMENT_TOKEN }}
