--- a/.github/workflows/deploy-azure-resources.yml
+++ b/.github/workflows/deploy-azure-resources.yml
@@ -24,6 +24,8 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  IS_DEPLOY: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Deploy') }}
+  IS_DESTROY: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Destroy' }}
 
 jobs:
   deploy:
@@ -50,7 +52,7 @@ jobs:
             -backend-config="access_key=${{ secrets.ACCESS_KEY }}"
 
       - name: Terraform Plan
-        if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Deploy') }}
+        if: ${{ env.IS_DEPLOY == 'true' }}
         id: plan
         run: |
           terraform plan \
@@ -59,7 +61,7 @@ jobs:
             -out=tfplan
 
       - name: Terraform Destroy
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Destroy' }}
+        if: ${{ env.IS_DESTROY == 'true' }}
         id: destroy
         run: |
           terraform plan \
@@ -73,6 +75,7 @@ jobs:
           terraform apply -auto-approve tfplan
 
       - name: Terraform Output
+        if: ${{ env.IS_DEPLOY == 'true' }}
         id: output
         run: |
           host_name="https://$(terraform output -raw static_web_host_name)"
