--- a/.github/workflows/deploy-azure-resources.yml
+++ b/.github/workflows/deploy-azure-resources.yml
@@ -81,5 +81,5 @@ jobs:
           host_name="https://$(terraform output -raw static_web_host_name)"
           name_servers=$(terraform output -json dns_zone_name_servers)
           echo "host_name=$host_name" >> $GITHUB_OUTPUT
-          echo "## Name Servers" >> $GITHUB_SUMMARY
-          echo $name_servers >> $GITHUB_SUMMARY
+          echo "## Name Servers" >> $GITHUB_STEP_SUMMARY
+          echo $name_servers >> $GITHUB_STEP_SUMMARY
