fix: add missing environment declaration for custom domain job in Azure workflow

--- a/.github/workflows/deploy-azure-resources.yml
+++ b/.github/workflows/deploy-azure-resources.yml
@@ -116,6 +116,7 @@ jobs:
   custom_domain:
     name: "Configure custom domain"
     runs-on: ubuntu-latest
+    environment: Production
     needs: terraform
     defaults:
       run:
