--- a/.github/workflows/deploy-storage-account.yml
+++ b/.github/workflows/deploy-storage-account.yml
@@ -77,6 +77,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Create environment variable file
         run: |
           echo "TF_BACKEND_STORAGE_ACCOUNT_NAME=${{ env.STORAGE_ACCOUNT_NAME }}"          >> "${{ env.ENVIRONMENT_VARIABLE_FILE }}"
