--- a/.github/workflows/deploy-storage-account.yml
+++ b/.github/workflows/deploy-storage-account.yml
@@ -37,7 +37,7 @@ permissions:
 
 env:
   STORAGE_ACCOUNT_NAME: "${{ github.event.inputs.workload }}${{ github.run_id }}"
-  ENVIRONMENT_SECRET_FILE: ".env"
+  ENVIRONMENT_VARIABLES_FILE: ".env"
 
 jobs:
   deploy:
@@ -64,21 +64,14 @@ jobs:
           STORAGE_ACCOUNT_NAME: "${{ env.STORAGE_ACCOUNT_NAME }}"
           CONTAINER_NAME: "${{ github.event.inputs.container_name }}"
 
-      - name: Retrieve access key for ${{ env.STORAGE_ACCOUNT_NAME }} storage account
-        id: get_access_key
-        run: |
-          ACCESS_KEY=$(az storage account keys list --account-name "${{ env.STORAGE_ACCOUNT_NAME }}" --query '[0].value' -o tsv)
-          echo "value=$ACCESS_KEY" >> "$GITHUB_OUTPUT"
-
       - name: Create ${{ github.event.inputs.environment }} secrets file
         run: |
-          echo "TF_BACKEND_STORAGE_ACCOUNT_NAME=${{ env.STORAGE_ACCOUNT_NAME }}"          >> "${{ env.ENVIRONMENT_SECRET_FILE }}"
-          echo "TF_BACKEND_CONTAINER_NAME=${{ github.event.inputs.container_name }}"      >> "${{ env.ENVIRONMENT_SECRET_FILE }}"
-          echo "TF_BACKEND_RESOURCE_GROUP=${{ github.event.inputs.resource_group_name }}" >> "${{ env.ENVIRONMENT_SECRET_FILE }}"
-          echo "TF_BACKEND_LOCATION=${{ github.event.inputs.location }}"                  >> "${{ env.ENVIRONMENT_SECRET_FILE }}"
-          echo "TF_BACKEND_ACCESS_KEY=${{ steps.get_access_key.outputs.key }}"          >> "${{ env.ENVIRONMENT_SECRET_FILE }}"
+          echo "TF_BACKEND_STORAGE_ACCOUNT_NAME=${{ env.STORAGE_ACCOUNT_NAME }}"          >> "${{ env.ENVIRONMENT_VARIABLES_FILE }}"
+          echo "TF_BACKEND_CONTAINER_NAME=${{ github.event.inputs.container_name }}"      >> "${{ env.ENVIRONMENT_VARIABLES_FILE }}"
+          echo "TF_BACKEND_RESOURCE_GROUP=${{ github.event.inputs.resource_group_name }}" >> "${{ env.ENVIRONMENT_VARIABLES_FILE }}"
+          echo "TF_BACKEND_LOCATION=${{ github.event.inputs.location }}"                  >> "${{ env.ENVIRONMENT_VARIABLES_FILE }}"
 
       - name: Set ${{ github.event.inputs.environment }} secrets
-        run: gh secret set -f "${{ env.ENVIRONMENT_SECRET_FILE }}"
+        run: gh variable set -f "${{ env.ENVIRONMENT_VARIABLES_FILE }}"
         env:
           GITHUB_TOKEN: ${{ github.token }}
