--- a/.github/workflows/deploy-storage-account.yml
+++ b/.github/workflows/deploy-storage-account.yml
@@ -27,8 +27,8 @@ on:
         required: false
         default: "germanywestcentral"
         type: string
-      workload:
-        description: "Descriptive name for the workload"
+      storage_account_name:
+        description: "Descriptive name for the storage account name"
         required: false
         default: "loganfarci"
         type: string
@@ -63,11 +63,11 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Create ${{ env.STORAGE_ACCOUNT_NAME }} storage account and ${{ github.event.inputs.container_name }} container
+      - name: Create ${{ github.event.inputs.storage_account_name }} storage account and ${{ github.event.inputs.container_name }} container
         run: .github/scripts/deploy_storage_account.sh
         env:
           RESOURCE_GROUP: ${{ github.event.inputs.resource_group_name }}
           LOCATION: ${{ github.event.inputs.location }}
-          STORAGE_ACCOUNT_NAME: "${{ env.STORAGE_ACCOUNT_NAME }}"
+          STORAGE_ACCOUNT_NAME: "${{ github.event.inputs.storage_account_name }}"
           CONTAINER_NAME: "${{ github.event.inputs.container_name }}"
           DESTROY: ${{ github.event.inputs.action == 'Destroy' }}
